pyinfra-debug.log
  File "/home/ctome/.local/pipx/venvs/pyinfra/lib64/python3.11/site-packages/pyinfra_cli/main.py", line 224, in cli
    _main(*args, **kwargs)
  File "/home/ctome/.local/pipx/venvs/pyinfra/lib64/python3.11/site-packages/pyinfra_cli/main.py", line 355, in _main
    state, config = _handle_commands(state, config, command, original_operations, operations, quiet)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ctome/.local/pipx/venvs/pyinfra/lib64/python3.11/site-packages/pyinfra_cli/main.py", line 612, in _handle_commands
    state, config, operations = _run_deploy_operations(state, config, operations, quiet)
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ctome/.local/pipx/venvs/pyinfra/lib64/python3.11/site-packages/pyinfra_cli/main.py", line 669, in _run_deploy_operations
    load_deploy_file(state, filename)
  File "/home/ctome/.local/pipx/venvs/pyinfra/lib64/python3.11/site-packages/pyinfra_cli/util.py", line 247, in load_deploy_file
    raise result
  File "/home/ctome/.local/pipx/venvs/pyinfra/lib64/python3.11/site-packages/pyinfra_cli/util.py", line 227, in load_file
    exec_file(filename)
  File "/home/ctome/.local/pipx/venvs/pyinfra/lib64/python3.11/site-packages/pyinfra_cli/util.py", line 50, in exec_file
    code = compile(code, filename, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "post-install.py", line 22
    homeDir = str(server.shell(("echo $HOME"))
                 ^
SyntaxError: '(' was never closed
